--- a/service/public/components/button/index.css
+++ b/service/public/components/button/index.css
@@ -1,14 +1,17 @@
-/*
-* @Author: Marte
-* @Date:   2016-12-01 12:21:20
-* @Last Modified by:   Marte
-* @Last Modified time: 2016-12-01 12:34:51
-*/
-.zou-button{
-    background:#3DDBDD;
-    padding:4px;
-    border:solid 2px #ccc;
-    font-size:14px;
-    font-family: "微软雅黑";
-    /*font:14px/1.5 "微软雅黑";*/
+.zou-button {
+  background-color: #3ddbdd;
+  color: #0000ff;
+  padding: 2px 6px;
+  border: solid 2px #cccccc;
+  font: 20px "微软雅黑";
+  text-decoration: none;
+  display: inline-block;
+}
+.zou-button-warn {
+  background-color: #ff0000;
+  color: #ffffff;
+}
+.zou-button-cancel {
+  background-color: #cccccc;
+  color: #333333;
 }
