--- a/service/public/page/css/style.css
+++ b/service/public/page/css/style.css
@@ -1,15 +1,27 @@
-*{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
-html,body{
-    width:100%;
-    height:100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
-#con{
-    width:200px;
-    height:100px;
-    background-color: lightblue;
-    position: fixed;
-    /*display: none;*/
+#con {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 200px;
+  height: 100px;
+  background-color: #add8e6;
+  position: fixed;
+  text-align: center;
+  padding: 10px 20px;
+}
+#close-btn {
+  cursor: pointer;
+}
+h1 {
+  line-height: 40px;
+  height: 40px;
 }
